--- a/GraphQL-Sample/CurriculumVitaeAPI/appsettings.Development.json
+++ b/GraphQL-Sample/CurriculumVitaeAPI/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "CV": "Server=localhost\\SQL2017;Database=kip_dev;User ID=sa;Password=r5t6y7u8;MultipleActiveResultSets=True;"
   }
 }
